--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,11 @@ pipeline {
         docker { image 'priyasivath/jenkins-ubuntu-agent:dockerfile.0.4' }
     }
     stages {
+        stage('scm') {
+            steps {
+               checkout scm 
+                }
+            }
         stage('Build') {
             steps {
                 sh ''' git --version
